[gd_scene load_steps=24 format=2]

[ext_resource path="res://Enemy/jia.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy_Jia.gd" type="Script" id=2]
[ext_resource path="res://SFX/Hits/hit25.mp3" type="AudioStream" id=3]
[ext_resource path="res://SFX/jia_die.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.7748
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.6, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AtkArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:move")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.1,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hurt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21.7754, 24.1483 )

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=18]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 226, 267 )
states/die/node = SubResource( 8 )
states/die/position = Vector2( 114, 140 )
states/hurt/node = SubResource( 9 )
states/hurt/position = Vector2( 437, 244 )
states/walk/node = SubResource( 10 )
states/walk/position = Vector2( 333, 140 )
transitions = [ "walk", "attack", SubResource( 11 ), "attack", "walk", SubResource( 12 ), "walk", "die", SubResource( 13 ), "attack", "die", SubResource( 14 ), "walk", "hurt", SubResource( 15 ), "attack", "hurt", SubResource( 16 ), "hurt", "walk", SubResource( 17 ) ]
start_node = "walk"
end_node = "die"
graph_offset = Vector2( -30, 18 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[node name="Enemy_Jia" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
offset = Vector2( 0, -0.717 )
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.717647, 1, 1 )
shape = SubResource( 1 )

[node name="floorChecker" type="RayCast2D" parent="."]
modulate = Color( 0.262745, 0.360784, 1, 1 )
position = Vector2( -23.5266, 5.33936 )
enabled = true
collision_mask = 34

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="PlayerChecker" type="RayCast2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -23.5266, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="AtkArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtkArea"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -14.3114, 0 )
shape = SubResource( 6 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )

[connection signal="body_entered" from="AtkArea" to="." method="_on_AtkArea_body_entered"]
